--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@ title: Page Not Found!
   <form method="get" action="http://www.google.com/search">
     <input type="text"   name="q" size="25" maxlength="255" value="" />
     <input type="submit" value="Google Search" />
-    <input type="checkbox"  name="sitesearch" value="ben.langfeld.me" checked />
+    <input type="checkbox"  name="sitesearch" value="smurfmeister.google.com" checked />
     search only this site.
   </form>
 </div>
