--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: name
 
 title: Page Not Found!
 ---
-<h1>Page Not Found</h1>
+<h1>These aren't the droids you're looking for.</h1>
 
 <blockquote>
   <i>You step in the stream,<br/>
@@ -12,7 +12,7 @@ title: Page Not Found!
   </i>
 </blockquote>
 
-<p>Sorry, I seem to have misplaced that page...</p>
+<p>The page doesn't exist, or I seem to have misplaced it...</p>
 
 <p>You could always try searching for it.</p>
 
