--- a/404.html
+++ b/404.html
@@ -4,4 +4,4 @@ layout: name
 title: Page Not Found!
 ---
 
-<img src="images/404-page.png" width="100%"/>
+<img src="images/404-page.png" height="100%"/>
